Introduce AzureOpenAI transcription support